1999-10-05  Jesus Bravo Alvarez  <jba@pobox.com>

	* configure.in (ALL_LINGUAS): Added Galician (gl)

1999-10-05  Tor Lillqvist  <tml@iki.fi>

	* gdk/win32/*.[ch]: Corresponding changes as in X11 backend.

	* gdk/win32/gdkcompat.c: New file, actually provide an
	implementation for the deprecated functions. (Just temporarily.)

	* gtk/gtkfilesel.c: Fix an #ifdef syntax botch.

	* gtk/makefile.{cygwin,msc}: Update gdk_headers.

	* gdk/win32/gdk.def gtk/gtk.def: Updates.

1999-10-05  Kjartan Maraas  <kmaraas@online.no>

	* configure.in: Added "uk" to ALL_LINGUAS.
	
Mon Oct  4 11:57:11 PDT 1999 Manish Singh <yosh@gimp.org>

	* configure.in: correct checking for BeOS check

	* gdk/gdktypes.h
	* gtk/fnmatch.c
	* gtk/gtkfilesel.c
	* gtk/gtkitemfactory.c
	* gtk/gtkmain.[ch]
	* gtk/gtkrc.c: use G_OS_WIN32 and G_HAVE_CYGWIN #defines

Mon Oct  4 16:16:53 1999  Pablo Saratxaga <pablo@mandrakesoft.com>

	* gtk/gtkrc.{bg,iso88591[345]}: add gtkrc files for some new charset
	encodings: iso-8859-13 (for Lithuanian), iso-8859-14 (used by celtic
	languages), iso-8859-15 (used in Estonia) and microsoft-cp1251 (used
	by Bulgarian). 

Sun Oct  3 18:13:44 1999  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwidget.c (gtk_reset_shapes_recurse): 
	Fix a reference to window_private->destroyed.	

	* gtk/gtkplug.c (gtk_plug_realize): Fix up a direct
	(ugly) setting of an internal GdkWindow member to use
	a _slightly_ cleaner macro.

	* gdk/gdkprivate.h: Split GdkWindowPrivate into
	GdkDrawablePrivate and GdkWindowPrivate.
	Add extra macros for accessing GDK_DRAWABLE_ components.

	* *.[ch]: Massive adjustments for the above, use the
	new macros in a lot of places.

Sun Oct  3 15:16:24 1999  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdktypes.h: Make GdkDrawable the base type,
	not GdkWindow.

Sun Oct  3 15:08:44 1999  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkdraw.c (gdk_drawable_get_data): Added new function.

Sun Oct  3 14:26:15 1999  Owen Taylor  <otaylor@redhat.com>
