@@ -1,3 +1,8 @@
+Wed Oct  6 12:46:17 PDT 1999 Manish Singh <yosh@gimp.org>
+
+	* gtk/fnmatch.c
+	* gtk/gtkfilesel.c: s/G_HAVE_CYGWIN/G_WITH_CYGWIN/
+
 1999-10-05  Jesus Bravo Alvarez  <jba@pobox.com>
 
 	* configure.in (ALL_LINGUAS): Added Galician (gl)
